# dsocr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  zensical.toml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
src/dsocr/: __init__.py  cli.py  infer.py
src/dsocr/cli/: ocrpdf.py
tests/: test_dsocr.py
